--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,8 @@
-#liferay.workspace.bundle.url=https://cdn.lfrs.sl/releases.liferay.com/portal/7.0.2-ga3/liferay-ce-portal-tomcat-7.0-ga3-20160804222206210.zip
-#liferay.workspace.environment=local
-#liferay.workspace.home.dir=bundles
+liferay.workspace.bundle.url=file:~/.liferay/bundles/liferay-dxp-digital-enterprise-tomcat-7.0-sp4-20170705142422877.zip
+liferay.workspace.environment=local
+liferay.workspace.home.dir=bundles
 #liferay.workspace.modules.default.repository.enabled=false
-#liferay.workspace.modules.dir=modules
+liferay.workspace.modules.dir=modules
 #liferay.workspace.plugins.sdk.dir=plugins-sdk
-#liferay.workspace.themes.dir=themes
-#liferay.workspace.wars.dir=wars
-
-microsoft.translator.client.id=
-microsoft.translator.client.secret=
+liferay.workspace.themes.dir=themes
+liferay.workspace.wars.dir=wars
